Brugada: add styling for activity sections progress

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.html
@@ -22,6 +22,7 @@
             <button
               class="step-button"
               [class.step-button--active]="isActive(i)"
+              [class.step-button--complete]="isCompleted(i)"
               [disabled]="!isCompleted(i)"
               (click)="jumpStep(i)"
             >
