--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
     <ng-template #content>
       <app-user-activities
         [activities]="activities"
+        [isUIDisabled]="isUIDisabled"
         (startActivity)="onStartActivity($event)"
         (continueActivity)="onContinueActivity($event)"
         (viewActivity)="onViewActivity($event)"
