--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -28,4 +28,9 @@ $colors: (
   'reset-password-bar': #76d25f94,
   'content-background': #f6f6f6,
   'content-text': #201413,
+  'progress_bar-inactive-bg': #d8d8d8,
+  'progress_bar-inactive-border': #a2a3a7,
+  'progress_bar-inactive-color': #4d4848,
+  'progress_bar-inactive-label-color': #a09b9b,
+  'progress_bar-active': #be121e,
 );
