--- a/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.scss
@@ -2,57 +2,69 @@
 @import '../../../styles/breakpoints';
 
 .wrapper {
-  position: relative;
   display: flex;
-  justify-content: space-between;
   margin: 5rem 0;
-}
-
-.bottom-line {
-  border-bottom: 3px solid map-get($colors, 'grey');
-  position: absolute;
-  top: 25px;
-  left: 25px;
-  width: 92%;
-  @include media-md {
-    width: 89%;
-  }
+  position: relative;
+  justify-content: space-between;
 }
 
 .step-container {
   display: flex;
   flex-direction: column;
+  &_active {
+    color: map-get($colors, 'progress_bar-active');
+
+    & .circular { 
+      background: map-get($colors, 'white');
+      border: 3px solid map-get($colors, 'progress_bar-active');
+      & .number {
+        color: map-get($colors, 'progress_bar-active');
+      }
+    }
+
+    & .step-paragraph {
+      color: map-get($colors, 'progress_bar-active');
+    }
+  }
 }
 
-.step-container_active {
-  color: map-get($colors, 'scarlet');
+.line {
+  top: -27px;
+  z-index: -1;
+  right: -65px;
+  position: relative;
+  border-bottom: 3px solid map-get($colors, 'progress_bar-inactive-border');
+  &_active {
+    border-bottom: 3px solid map-get($colors, 'progress_bar-active');
+  }
+  @include media-md {
+    right: -50px;
+  }
 }
 
 .circular {
-  border: 3px solid map-get($colors, 'grey');
+  width: 50px;
+  height: 50px;
+  position: relative;
+  align-self: center;
   border-radius: 100%;
   display: inline-block;
-  height: 50px;
-  width: 50px;
-  position: relative;
-  background: map-get($colors, 'light-grey');
-  align-self: center;
-}
-
-.circular_active {
-  background: map-get($colors, 'white');
-  border: 3px solid map-get($colors, 'scarlet');
+  color: map-get($colors, 'progress_bar-inactive-color');
+  background: map-get($colors, 'progress_bar-inactive-bg');
+  border: 3px solid map-get($colors, 'progress_bar-inactive-border');
 }
 
 .number {
-  position: absolute;
   top:50%;
   left:50%;
-  transform: translate(-50%, -50%);
   font-weight: bold;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 
 .step-paragraph {
+  font-size: 14px;
+  max-width: 130px;
   text-align: center;
-  max-width: 100px;
+  color: map-get($colors, 'progress_bar-inactive-label-color');
 }
