--- a/ddp-workspace/projects/ddp-brugada/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/user-activities/user-activities.component.html
@@ -1,4 +1,4 @@
-<table *ngIf="activities" mat-table [dataSource]="activities">
+<table *ngIf="dataSource" mat-table [dataSource]="dataSource">
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>
@@ -41,26 +41,11 @@
       </span>
 
       <div class="status">
-        <ng-container
-          [ngTemplateOutlet]="hasPreviousInstance(activity) ? completeStatusTmpl : commonStatusTmpl"
-          [ngTemplateOutletContext]="{ activity: activity }"
-        ></ng-container>
+        <mat-icon [ngClass]="activity.statusCode">
+          {{ icons[activity.statusCode] }}
+        </mat-icon>
 
-        <ng-template #completeStatusTmpl>
-          <mat-icon [ngClass]="ActivityStatusCodes.COMPLETE">
-            {{ icons[ActivityStatusCodes.COMPLETE] }}
-          </mat-icon>
-
-          {{ 'App.UserActivities.Status.' + ActivityStatusCodes.COMPLETE | translate }}
-        </ng-template>
-
-        <ng-template #commonStatusTmpl let-activity="activity">
-          <mat-icon [ngClass]="activity.statusCode">
-            {{ icons[activity.statusCode] }}
-          </mat-icon>
-
-          {{ 'App.UserActivities.Status.' + activity.statusCode | translate }}
-        </ng-template>
+        {{ 'App.UserActivities.Status.' + activity.statusCode | translate }}
       </div>
     </td>
   </ng-container>
@@ -72,14 +57,7 @@
     </th>
 
     <td mat-cell *matCellDef="let activity">
-      <ng-container *ngIf="hasPreviousInstance(activity); else commonActivityButtonsTmpl">
-        <ng-container
-          [ngTemplateOutlet]="updateActivityBtnTmpl"
-          [ngTemplateOutletContext]="{ activity: activity }"
-        ></ng-container>
-      </ng-container>
-
-      <ng-template #commonActivityButtonsTmpl [ngSwitch]="activity.statusCode">
+      <ng-container [ngSwitch]="activity.statusCode">
         <ng-container *ngSwitchCase="ActivityStatusCodes.CREATED">
           <button type="button" class="btn btn--scarlet" [disabled]="isUIDisabled" (click)="onStartActivity(activity)">
             {{ 'App.UserActivities.Button.Start' | translate }}
@@ -98,7 +76,7 @@
             [ngTemplateOutletContext]="{ activity: activity }"
           ></ng-container>
         </ng-container>
-      </ng-template>
+      </ng-container>
     </td>
   </ng-container>
 
