--- a/ddp-workspace/projects/ddp-brugada/src/styles/_activities.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_activities.scss
@@ -13,7 +13,7 @@
 
 .activity-question-title,
 .activity-text-title {
-  margin: 1.65em 0 0.25em;
+  margin: 1.65em 0 0.5em;
 
   font-size: 2.4rem;
 
@@ -33,6 +33,8 @@
 
 .ErrorMessage,
 .error-message {
+  margin: 0.5em 0;
+
   color: map-get($colors, 'scarlet');
 }
 
@@ -68,6 +70,21 @@
 }
 
 ddp-date {
+  div {
+    div:first-of-type {
+      display: block !important;
+
+      .mat-dialog-content {
+        display: block;
+        width: 100%;
+
+        .mat-form-field {
+          width: 100%;
+        }
+      }
+    }
+  }
+
   .ddp-answer-container.picklist {
     display: flex;
     align-items: center;
@@ -101,6 +118,55 @@ ddp-date {
 
         font: inherit;
         color: inherit;
+      }
+    }
+  }
+}
+
+ddp-activity-radiobuttons-picklist-question {
+  .mat-radio-group {
+    .margin-5 {
+      margin: 0;
+
+      &:not(:last-of-type) {
+        margin-bottom: 0.5em;
+      }
+
+      .mat-radio-button {
+        .mat-radio-container {
+          top: 3px;
+        }
+      }
+    }
+  }
+}
+
+ddp-activity-checkboxes-picklist-question {
+  .mat-list {
+    padding-top: 0;
+
+    &-item {
+      height: auto !important;
+      min-height: 3.6rem;
+
+      &:not(:last-of-type) {
+        margin-bottom: 0.5em;
+      }
+
+      &-content {
+        padding: 0 !important;
+
+        .mat-checkbox {
+          &-inner-container {
+            width: 2rem;
+            height: 2rem;
+
+            margin-top: 0;
+            margin-bottom: 0;
+
+            top: 3px;
+          }
+        }
       }
     }
   }
