--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -29,8 +29,10 @@ $colors: (
   'content-background': #f6f6f6,
   'content-text': #201413,
   'progress_bar-inactive-bg': #d8d8d8,
-  'progress_bar-inactive-border': #a2a3a7,
-  'progress_bar-inactive-color': #4d4848,
-  'progress_bar-inactive-label-color': #a09b9b,
-  'progress_bar-active': #be121e,
+  'progress_bar-inactive-border': #999ba0,
+  'progress_bar-inactive-color': #403b3b,
+  'progress_bar-inactive-label-color': #a9a5a5,
+  'progress_bar-active': #b64142,
+  'progress_bar-active-border': #ab2527,
+  'progress_bar-active-passed-color': #302826,
 );
