--- a/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
@@ -4,6 +4,7 @@
       class="step-container"
       *ngFor="let activity of activities; index as i"
       [class.step-container_active]="i <= State.activeActivityNumber"
+      [class.step-container_active_white]="i === State.activeActivityNumber"
     >
       <div class="circular">
         <p class="number">{{ i + 1 }}</p>
@@ -14,7 +15,7 @@
         [class.line_active]="i <= State.activeActivityNumber - 1"
       ></div>
       <p class="step-paragraph">
-        {{ activity.activityName }}
+        {{ activity.activityNameI18nKey | translate }}
       </p>
     </div>
   </ng-container>
