Add a new partner to Osteo project

--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
@@ -174,9 +174,9 @@
                         <img lazy-resource class="image" src="assets/images/partner-os-collaborative.svg"
                             [alt]="'HomePage.PartnersSection.ImagesAlts.OsCollaborative' | translate">
                     </a>
-                    <a href="http://www.targetcancerfoundation.org/" target="_blank">
-                        <img lazy-resource class="image" src="assets/images/partner-tcf.png"
-                            [alt]="'HomePage.PartnersSection.ImagesAlts.TCF' | translate">
+                    <a href="https://mcamf.org/" target="_blank">
+                        <img lazy-resource class="image" src="assets/images/partner-mcamf.png"
+                            [alt]="'HomePage.PartnersSection.ImagesAlts.MCAMF' | translate">
                     </a>
                 </div>
             </div>
@@ -198,6 +198,11 @@
                         target="_blank">
                         <img lazy-resource class="social-media-logos__img" src="assets/images/facebook.png"
                             [alt]="'Common.Alts.Facebook' | translate">
+                    </a>
+                    <a (click)="sendSocialMediaAnalytics('instagram')" class="social-media-logo" [href]="instagramUrl"
+                        target="_blank">
+                        <img lazy-resource class="social-media-logos__img" src="assets/images/instagram.png"
+                            [alt]="'Common.Alts.Instagram' | translate">
                     </a>
                     <a (click)="sendSocialMediaAnalytics('instagram')" class="social-media-logo" [href]="instagramUrl"
                         target="_blank">
