--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
@@ -174,10 +174,16 @@
                         <img lazy-resource class="image" src="assets/images/partner-os-collaborative.svg"
                             [alt]="'HomePage.PartnersSection.ImagesAlts.OsCollaborative' | translate">
                     </a>
-                    <a href="https://mcamf.org/" target="_blank">
-                        <img lazy-resource class="image" src="assets/images/partner-mcamf.png"
-                            [alt]="'HomePage.PartnersSection.ImagesAlts.MCAMF' | translate">
+                    <a href="http://www.targetcancerfoundation.org/" target="_blank">
+                        <img lazy-resource class="image" src="assets/images/partner-tcf.png"
+                            [alt]="'HomePage.PartnersSection.ImagesAlts.TCF' | translate">
                     </a>
+                </div>
+                <div class="partners__group">
+                  <a href="https://mcamf.org/" target="_blank">
+                    <img lazy-resource class="image" src="assets/images/partner-mcamf.png"
+                         [alt]="'HomePage.PartnersSection.ImagesAlts.MCAMF' | translate">
+                  </a>
                 </div>
             </div>
         </div>
