DDP-6899: Add a new partner to Osteo project (#856)

--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
@@ -179,6 +179,12 @@
                             [alt]="'HomePage.PartnersSection.ImagesAlts.TCF' | translate">
                     </a>
                 </div>
+                <div class="partners__group">
+                  <a href="https://mcamf.org/" target="_blank">
+                    <img lazy-resource class="image" src="assets/images/partner-mcamf.png"
+                         [alt]="'HomePage.PartnersSection.ImagesAlts.MCAMF' | translate">
+                  </a>
+                </div>
             </div>
         </div>
     </section>
