Circadia: first integration attempt

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
 <ng-template #userActivities>
   <app-user-activities
     [activities]="activities"
+    [sleepLogUrl]="diaryUrl"
     (startActivity)="onStartActivity($event)"
     (continueActivity)="onContinueActivity($event)"
     (viewActivity)="onViewActivity($event)"
