--- a/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_colors.scss
@@ -29,10 +29,10 @@ $colors: (
   'content-background': #f6f6f6,
   'content-text': #201413,
   'progress_bar-inactive-bg': #d8d8d8,
-  'progress_bar-inactive-border': #999ba0,
-  'progress_bar-inactive-color': #403b3b,
-  'progress_bar-inactive-label-color': #a9a5a5,
+  'progress_bar-inactive-border': #a0a2a6,
+  'progress_bar-inactive-color': #5a5656,
+  'progress_bar-inactive-label-color': #928d8d,
   'progress_bar-active': #b64142,
-  'progress_bar-active-border': #ab2527,
-  'progress_bar-active-passed-color': #302826,
+  'progress_bar-active-border': #b64142,
+  'progress_bar-active-passed-color': #261d1c,
 );
