DDP-6873: Footer spanish translations

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/header/header.component.html
@@ -132,12 +132,11 @@
           </div>
         </li>
 
-        <li class="nav-list__item" *ngIf="isLanguageSelectorVisible">
+        <li class="nav-list__item">
           <div class="nav-control">
             <ddp-language-selector
               [class.nav-control__button--white]="isHeaderWhite"
               (click)="onDropdownClick('languageList')"
-              (isVisible)="onLanguageSelectorVisibilityChange($event)"
             ></ddp-language-selector>
           </div>
         </li>
