--- a/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/progress-bar/progress-bar.component.html
@@ -1,22 +1,17 @@
-<div class="wrapper" *ngIf="{ activeActivityNumber: activeActivityNumber$ | async } as State">
-  <ng-container *ngIf="State.activeActivityNumber !== null">
+<div class="wrapper" *ngIf="{ activities: activities$ | async } as State">
+  <ng-container *ngIf="State.activities">
     <div
       class="step-container"
-      *ngFor="let activity of activities; index as i"
-      [class.step-container_active]="i <= State.activeActivityNumber"
-      [class.step-container_active_white]="i === State.activeActivityNumber"
+      *ngFor="let activity of State.activities; index as i"
+      [ngClass]="{
+        'step-container_active': activity.status === ActivityStatusCodes.COMPLETE,
+        'step-container_active_white': activity.status === ActivityStatusCodes.IN_PROGRESS
+      }"
     >
       <div class="circular">
         <p class="number">{{ i + 1 }}</p>
       </div>
-      <div
-        class="line"
-        *ngIf="i !== activities.length - 1"
-        [class.line_active]="i <= State.activeActivityNumber - 1"
-      ></div>
-      <p class="step-paragraph">
-        {{ activity.activityNameI18nKey | translate }}
-      </p>
+      <p class="step-paragraph" [innerHtml]="activity.activityNameI18nKey | translate"></p>
     </div>
   </ng-container>
 </div>
