--- a/ddp-workspace/projects/ddp-rgp/src/app/components/home/home.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/home/home.component.html
@@ -147,8 +147,7 @@
   <div class="row Home-articleLast Background--lightBlue TopMargin75">
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 Home-articleText">
       <h2 class="Home-quoteText">
-        <span translate>HomePage.Quote.Text1</span>
-        <span class="Accent" translate>HomePage.Quote.Text2</span>."
+          <span [innerHTML]="'HomePage.Quote.Text' | translate"></span>
       </h2>
       <p class="Home-quoteSignature" translate>HomePage.Quote.Author</p>
     </div>
