--- a/ddp-workspace/projects/ddp-rgp/src/app/components/home/home.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/home/home.component.html
@@ -254,6 +254,13 @@
             </div>
           </a>
         </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 Aligned--center">
+          <a href="https://curehht.org/" target="_blank">
+            <div class="Home-partners Home-partnerCureHHT" role="img" [attr.alt]="'HomePage.Partners.CureHHT' | translate">
+            </div>
+          </a>
+        </div>
       </div>
     </section>
   </div>
