Fix css for AboutUs page
  as a background image fit updated section

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
@@ -5,6 +5,7 @@
 
     &.about-us {
         .section-0 {
+            min-height: 705px;
             background-image: url(/assets/images/oval_green_left.png);
         }
         .section-1 {
@@ -184,6 +185,12 @@
 }
 
 @media screen and (max-width: $desktop-breakpoint) {
+    .page.about-us {
+        .section-0 {
+            min-height: unset;
+        }
+    }
+
     .section {
         &-0 {
             background-size: auto 480px;
