DDP-6908: Add outlined button variant

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/user-activities/user-activities.component.html
@@ -91,7 +91,7 @@
 </ng-template>
 
 <ng-template #updateActivityBtnTmpl let-activity="activity">
-  <button type="button" class="btn btn--scarlet" [disabled]="isUIDisabled" (click)="onUpdateActivity(activity)">
+  <button type="button" class="btn btn--scarlet-outline" [disabled]="isUIDisabled" (click)="onUpdateActivity(activity)">
     {{ 'App.UserActivities.Button.Update' | translate }}
   </button>
 </ng-template>
