DDP-6927: Updates to `About Us` page [Pancan] (#876)
* Update some text on AboutUs page [Pancan] in English

* Reorder Leadership section

* Fix css for AboutUs page

  as a background image fit updated section

* DDP-6927 update styles

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
@@ -6,6 +6,7 @@
     &.about-us {
         .section-0 {
             background-image: url(/assets/images/oval_green_left.png);
+            background-size: contain;
         }
         .section-1 {
             background-image: url(/assets/images/oval_carrot_right.png);
