DDP-6908: Add outline to "View" button

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/user-activities/user-activities.component.html
@@ -85,7 +85,7 @@
 </table>
 
 <ng-template #viewActivityBtnTmpl let-activity="activity">
-  <button type="button" class="btn btn--scarlet" [disabled]="isUIDisabled" (click)="onViewActivity(activity)">
+  <button type="button" class="btn btn--scarlet-outline" [disabled]="isUIDisabled" (click)="onViewActivity(activity)">
     {{ 'App.UserActivities.Button.View' | translate }}
   </button>
 </ng-template>
